feat(theme): changed theme

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -82,8 +82,8 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(f2d5cfee) rgba(babbf1ee) 45deg
-    col.inactive_border = rgba(babbf1ee)  
+    col.active_border = rgba(c5b235ee) rgba(32633aee) 45deg
+    col.inactive_border = rgba(32633aee)  
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -268,6 +268,8 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
+bind = $mainMod, tab, workspace, e+1
+bind = $mainMod SHIFT, tab, workspace, e-1
 bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
