--- a/cava/config
+++ b/cava/config
@@ -218,7 +218,7 @@
 # default is to keep current terminal color
 
 background = default
-foreground = '#f2d5cf' 
+foreground = default 
 
 # Gradient mode, only hex defined colors are supported,
 # background must also be defined in hex or remain commented out. 1 = on, 0 = off.
