fix(color): small color adjustments

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -79,11 +79,11 @@ general {
     gaps_in = 3
     gaps_out = 10
 
-    border_size = 2
+    border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(c5b235ee) rgba(32633aee) 45deg
-    col.inactive_border = rgba(32633aee)  
+    col.active_border = rgba(ffa500ee) rgba(2a8232ee) 45deg
+    col.inactive_border = rgba(2a8232ee)  
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -104,9 +104,10 @@ decoration {
 
     shadow {
         enabled = true
-        range = 4
-        render_power = 3
-        color = rgba(1a1a1aee)
+        range = 10
+        render_power = 1
+        ignore_window = false
+        color = rgba(00000055)
     }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
@@ -114,7 +115,6 @@ decoration {
         enabled = true
         size = 3
         passes = 1
-
         vibrancy = 0.1696
     }
 }
@@ -122,7 +122,6 @@ decoration {
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = yes, please :)
-
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = easeOutQuint,0.23,1,0.32,1
@@ -308,3 +307,7 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+#Blur for layers like rofi and swaync
+layerrule = blur, rofi
+layerrule = blur, swaync
