fix(base): switch browser to librewolf

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor=,preferred,auto,auto
 $terminal = kitty
 $fileManager = nautilus
 $menu = rofi -show drun
-$browser = firefox
+$browser = librewolf
 
 
 #################
@@ -49,7 +49,6 @@ $browser = firefox
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 exec-once = waybar
-exec-once = walker --gapplication-service
 exec-once = hyprpaper
 
 #############################
@@ -77,16 +76,16 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 3
-    gaps_out = 10
+    gaps_out = 5
 
     border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(ffa500ee) rgba(2a8232ee) 45deg
+    col.active_border = rgba(d0b52fee) rgba(2a8232ee) 45deg
     col.inactive_border = rgba(2a8232ee)  
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
+    resize_on_border = true
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -133,8 +132,8 @@ animations {
     animation = global, 1, 10, default
     animation = border, 1, 5.39, easeOutQuint
     animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
+    animation = windowsIn, 1, 4.1, easeOutQuint, slide 
+    animation = windowsOut, 1, 1.49, linear, slide 
     animation = fadeIn, 1, 1.73, almostLinear
     animation = fadeOut, 1, 1.46, almostLinear
     animation = fade, 1, 3.03, quick
