--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,3 @@
-preload = .config/wallpapers/a_painting_of_a_garden_with_a_house_and_trees.jpeg
-wallpaper = ,.config/wallpapers/a_painting_of_a_garden_with_a_house_and_trees.jpeg
+preload = /home/tisinti/Nextcloud/Wallpaper/artsy/a_painting_of_a_garden_with_a_house_and_trees.jpeg
+wallpaper = ,/home/tisinti/Nextcloud/Wallpaper/artsy/a_painting_of_a_garden_with_a_house_and_trees.jpeg 
+
